--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,6 +19,11 @@
     </div>
     <% end %>
   </div>
+  <div>
+    <%= form.label :status %><br>
+    <%= form.select :status, Visible::VALID_STATUSES, selected: article.status || 'public' %>
+  </div>
+
 
   <div>
     <%= form.submit %>
