--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,13 @@
 <h1>Articles</h1>
-<p>Hello, here are the articles</p>
+<p>Our blog has <%= Article.public_count %> articles</p>
 <ul>
 <% @articles.each do |article| %>
+<%unless article.archived?%>
 <li>
  <%= link_to article.title, article %>
 </li>
+<%end %>
 <% end %>
 </ul>
-<%= link_to "Add new articke", new_article_path %>
+<%= link_to "Add new article", new_article_path %>
 
